# ExoCharts

./: .gitignore  CLAUDE.md  DSL-OVERVIEW.md  PARALLEL_STREAMING_ARCHITECTURE.md  README-EXTERNAL-ENDPOINTS.md  README-SDK.md  README.md  READY_FOR_PRODUCTION.md  SDK-COMPLETE.md  build.zig  install.sh  killExoChart.sh  startExoChart.sh  tsconfig.json  verify.sh
dsl/: README.md
dsl/cli/: cli.ts
dsl/compiler/: c.ts  go.ts  javascript.ts  python.ts  typescript.ts  zig.ts
dsl/examples/: basic.exo  ma_crossover.exo
dsl/parser/: ast.ts  lexer.ts  parser.ts
examples/c/: example.c
examples/javascript/: example.js
examples/typescript/: example.ts
examples/zig/: example.zig
frontend/: index.html
include/exo/: tick_ingester.h  types.h
sdk/angular/: exogrid.service.ts
sdk/c/: exogrid.h
sdk/cpp/: exogrid.hpp
sdk/csharp/: ExoGrid.cs
sdk/go/: exogrid.go
sdk/java/: ExoGrid.java
sdk/js/: index.d.ts  index.js  package.json
sdk/python/: setup.py
sdk/python/exogrid/: __init__.py  (+3 more)
sdk/qt/: ExoGridChart.qml
sdk/react/: ExoGridChart.jsx
sdk/svelte/: ExoGridChart.svelte
sdk/swift/: Package.swift
sdk/vue/: ExoGridChart.vue
sdk/wasm/: Cargo.toml
sdk/wasm/src/: lib.rs
sdk/zig/: exogrid.zig
src/exo/: coinbase_match.zig  connector.zig  exo_c_api.zig  exo_server.zig  exo_ws.zig  http_server.zig  kraken_match.zig  lcx_match.zig  market_matrix.zig  multi_stream.zig  parallel_aggregator.zig  stream_instance.zig  tick_aggregator.zig  tick_ingester.cpp  ticker_map.zig  ticker_matrix.zig  tls.zig  trade_fetcher.zig  ws_client.zig  zig_ws_mock.cpp
(+5 files in other folders)
