[package]
name = "exogrid-wasm"
version = "1.0.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlElement",
    "CanvasRenderingContext2d",
] }
js-sys = "0.3"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
